[package]
name = "agent_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.7.0"
libc = "0.2.148"
memmap2 = "0.9.0"
serde = "1.0.189"
toml = "0.8.2"
zstd = "0.13.0"



[[test]]
name = "test_root"
path = "tests/mod.rs"
