[package]
name = "agent_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.148"
memmap2 = "0.9.0"
protobuf = "3.3.0"
serde = { version = "1.0.192",features = ["derive"]}
toml = "0.8.2"
zstd = "0.13.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
lazy_static = "1.4.0"

[profile.release]
debug = 2

[[test]]
name = "test_root"
path = "tests/mod.rs"
